2013-02-08  Guillaume Friloux
        * Fix usage of Ecore_Con_Server's internal buffer.

2013-02-08  Carsten Haitzler (The Rasterman)

        * Fix ecore_x ecore_x_screen_is_composited/set() to work
        properly on multihead.

2013-02-07  Christopher Michael (devilhorns)

        * Added ecore_x_randr_crtc_info_free function.

2013-02-07  Christopher Michael (devilhorns)

        * Added ecore_x_randr_crtc_info_get function.

2013-02-07  Cedric Bail

	* eina: Eina_Tiler now take tile size into account.

2013-02-07  WooHyun Jung

	* edje: Checking walking_callbacks for not removing patterns which are still used.

2013-02-06  Cedric Bail

	* eina: fix map leak in Eina_File.

2013-02-05  Eduardo Lima (Etrunko) <eduardo.lima@intel.com>

        * ecore_wayland: Fix return type of function ecore_wl_outputs_get()

2013-02-04  U. Artie Eoff (uartie) <ulysses.a.eoff@intel.com>

        * ecore_wayland: Add #ifdef __cplusplus to Ecore_Wayland.h so the
        API can be used by C++ programs.
        * ecore_wayland: Add ecore_wl_registry_get
        * ecore_wayland: Add ecore_wl_globals_get

2013-02-04  Raphael Kubo da Costa <raphael.kubo.da.costa@intel.com>

        * evas: Stop initializing and shutting Fontconfig down

2013-02-04  Cedric Bail

	* eina: counter measure denial of service on eina_hash function.

2013-02-04  Jihoon Kim (jihoon)

        * edje entry : Support &, < and > in preedit string.

2013-02-02  Chidambar Zinnoury (ilLogict)
        * Update French translation.

2013-02-01  Mike Blumenkrantz

        * added eet_data_descriptor_name_get()
        * added eina_stringshare_refplace()

2013-01-31  Guillaume Friloux

        * Fix a memory leak in ecore_con_dns

2013-01-31  Jihoon Kim (jihoon)

        * edje entry : Remove ecore_imf_context_cursor_position_set in functions related to selection.

2013-01-30  Christopher Michael (devilhorns)

        * Implement RandR 1.4 functions which were missing in our Ecore_X API
