@@ -158,3 +158,4 @@ Fixes:
     * Fix memleak in Eina_File.
     * Fix ecore_x_screen_is_composited/set() to work on multihead.
     * Fix memory usage of Ecore_Con_Server
+    * Evas textblock: Fixed a selection issue with different scripts and bidi.
